--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             </div>
           </div>
 
-          <div class="col-lg-5 col-md-8">
+          <!--<div class="col-lg-5 col-md-8">
             <div class="form">
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row">
